fix: adapted script for my needs

--- a/bananapi_pmic.conf
+++ b/bananapi_pmic.conf
@@ -5,6 +5,6 @@ LoadPlugin python
     Import "bananapi_pmic"
     <Module bananapi_pmic>
         # Armbian has this at :device1
-        Path = "/sys/bus/platform/devices/axp20x-adc/iio:device1 "
+        #Instance = "/sys/bus/platform/devices/axp20x-adc"
     </Module>
 </Plugin>
